--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.453.0",
     "nativewind": "next",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
