--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-crypto": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
